fixed blurriness on mobile view homepage

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1008,6 +1008,9 @@ select {
 .max-w-\[20ch\] {
   max-width: 20ch;
 }
+.max-w-2xl {
+  max-width: 42rem;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
